--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>orCult</title>
-</head>
-<body>
-    <div class="container">
-<div>
-<img src="/img/orCult.png" alt="Facebook" class="logo">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>orcult</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="box-width">
+                <img src="/img/orCult.png" alt="Facebook" class="logo" />
 
+                <h2>
+                    O orCult ajuda você a se conectar com pessoas que querem
+                    compartilhar o melhor da vida.
+                </h2>
+                <p>
+                    <a href="#">Criar uma Página</a> para uma celebridade, uma
+                    marca ou uma empresa.
+                </p>
+            </div>
+            <div class="box-width">
+                <form>
+                    <input type="text" placeholder="Email ou Telefone" />
+                    <input type="password" placeholder="Senha" />
+                    <button class="entrar">Entrar</button>
+                    <a href="#">Esqueceu sua senha?</a>
+                    <button class="criar-ct">Criar nova conta</button>
+                </form>
+            </div>
+        </div>
 
-<h2>O orCult ajuda você a se conectar com pessoas que querem compartilhar o melhor da vida.</h2>
-</div>
-<div>
-<form>
-    <input type="text" placeholder="Email ou Telefone">
-    <input type="password" placeholder="Senha">
-    <button class="entrar">Entrar</button>
-    <a href="#">Esqueceu sua senha?</a>
-    <button class="criar-ct">Criar nova conta</button>
-</form>
-</div>
-<p><a href="#">Criar uma Página</a> para uma celebridade, uma marca ou uma empresa.</p>
-    </div>
+        <footer>orCult © <span id="year">0</span></footer>
 
-<footer>
-orCult © <span id="year">0</span>
-</footer>
+        <script>
+            const year = document.getElementById('year')
+            const actualYear = new Date()
 
-
-<script>
-const year = document.getElementById('year');
-const actualYear = new Date();
-
-year.innerHTML = actualYear.getFullYear();
-</script>
-</body>
+            year.innerHTML = actualYear.getFullYear()
+        </script>
+    </body>
 </html>
